# ccplusplus2020_2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
hw2/data/: data.txt
hw2/lib/includes/: sequential.h  utility.h
hw2/lib/sources/: main.c  sequential.c  utility.c
hw2/test/: test.cpp
